<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="image">Image</string>
    <string name="str_start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise1">Exercise Name</string>
    <string name="exercise_image">Exercise_Image</string>
    <string name="upcoming_exercise">Upcoming Exercise :</string>
    <string name="end">END</string>
    <string name="done">done</string>
    <string name="message_confirmation">This will stop your Workout. You\'ve come so far this time, are you sure you want to quit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="bmi">BMI</string>
    <string name="history">HISTORY</string>
    <string name="weight_in_kg">Weight(in Kg)</string>
    <string name="height_in_cm">Height(in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="weight_in_lbs">Weight (in lbs)</string>
</resources>