<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/main_screen_main_layout_padding"
    android:background="@color/white"
    >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_screen_image_button"
            android:contentDescription="@string/image"
            android:src="@drawable/workout"
            />

        <LinearLayout
            android:id="@+id/ll_start"
            android:layout_width="@dimen/start_button_size"
            android:layout_height="@dimen/start_button_size"
            android:layout_marginTop="@dimen/start_button_margin_top"
            android:gravity="center"
            android:background="@drawable/item_circular_ripple_border_background"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_start"
                android:textStyle="bold"
                android:textColor="@color/app_black"
                android:textSize="@dimen/start_button_label_text_size"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:baselineAligned="false"
        >

    <LinearLayout
        android:id="@+id/ll_bmi"
        android:layout_width="@dimen/start_button_size"
        android:layout_height="@dimen/start_button_size"
        android:layout_marginEnd="40dp"
        android:background="@drawable/exercise_activity_circular_accent_background"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textColor="@color/app_black"
            android:textSize="27sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_width="@dimen/start_button_size"
        android:layout_height="@dimen/start_button_size"
        android:background="@drawable/item_circular_ripple_border_background"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@color/app_black"
            android:textSize="@dimen/start_button_label_text_size"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>

</LinearLayout>